--- a/css/style.default.css
+++ b/css/style.default.css
@@ -37,7 +37,7 @@ body {
 }
 
 section {
-  padding: 150px 0;
+  padding: 80px 0;
 }
 
 @media (max-width: 767.98px) {
@@ -68,6 +68,8 @@ section {
   height: 1px;
   margin: 20px 0 20px;
   background: #555;
+  font-family: 'Major Mono Display',
+  monospace;
 }
 
 .section-inverse {
@@ -1108,7 +1110,7 @@ h6,
   line-height: 1.44;
   color: inherit;
   text-transform: uppercase;
-  letter-spacing: 0.2em;
+  letter-spacing: 4px;
 }
 
 h1,
